[package]
name = "chest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
flate2 = "1.0"
ring = { version = "0.17.7", features = ["std"] }
