[package]
name = "chest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bincode = "1.3"
clap = { version = "4.4", features = ["derive"] }
console = { version = "0.15", default-features = false, features = [
    "ansi-parsing",
] }
flate2 = "1.0"
once_cell = "1.19"
ring = { version = "0.17.7", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
